# Django_Login

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt  test.py  test.txt  utils.py
login/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_gender.py  0002_user_gender.py  0003_alter_user_gender.py  0003_user_gender.py  0004_alter_user_id.py
